# senegal-rental-price

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docker.yml
api/: dependencies.py  main.py  schemas.py
conf/: config.yaml
conf/data/: default.yaml
conf/model/: random_forest.yaml  ridge.yaml  xgboost.yaml
data/: README.md
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.frontend-react  docker-compose.yml
frontend/: streamlit_app.py
frontend/react-app/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/react-app/src/: App.jsx  api.js  index.css  useCountUp.js
frontend/react-app/src/components/: BrandPanel.jsx  RentalForm.jsx  ResultCard.jsx  Skyline.jsx
notebooks/: 01_exploration.ipynb
src/senegal_rental_price/data/: generate_synthetic_data.py  preprocessing.py
src/senegal_rental_price/features/: build_features.py
src/senegal_rental_price/models/: predict.py  train.py
src/senegal_rental_price/utils/: logger.py
tests/: test_api.py  test_features.py  test_generate_synthetic_data.py  test_predict.py  test_preprocessing.py  test_train.py
