[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senegal-rental-price"
version = "0.1.0"
description = "Prédiction du prix des locations immobilières au Sénégal — modèle, API et front."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Babou Gaye" },
    { name = "Mouhamed Diouf" },
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "mlflow==2.19.0",  # doit rester synchronisé avec l'image ghcr.io/mlflow/mlflow:v2.19.0 dans docker-compose.yml
    "joblib>=1.3",
    "fastapi>=0.110",
    "pydantic>=2.6",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.32",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "mypy>=1.9",
    "ruff>=0.3",
    "black>=24.1",
    "pandas-stubs",
    "types-requests",
    "pre-commit>=3.6",
]

[project.scripts]
senegal-rental-train = "senegal_rental_price.models.train:main"
senegal-rental-generate-data = "senegal_rental_price.data.generate_synthetic_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "notebooks/"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
